# claude-scientific-skills

./: CLAUDE.md
.claude-plugin/: marketplace.json
docs/plans/: 2025-01-20-arxiv-database-design.md
scientific-skills/arxiv-database/: README.md  SKILL.md  WORKFLOW_RECOMMENDATIONS.md  pyproject.toml
scientific-skills/arxiv-database/docs/development/: ARXIV_LITERATURE_COMPARISON.md  CLAUDE_WRITER_ANALYSIS.md  FIXES_APPLIED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST.md  LITERATURE_COMPARISON.md  LONG_TERM_STRATEGY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  REFACTORING_PROGRESS.md  REVIEW.md  TESTING_SUMMARY.md
scientific-skills/arxiv-database/references/: api_reference.md  categories.md  integration_guide.md  query_syntax.md
scientific-skills/arxiv-database/scripts/: arxiv-review  arxiv_client.py  comprehensive_review.py  comprehensive_review.py.backup  download.py  paper_structure_extractor.py  search.py
scientific-skills/arxiv-database/scripts/analysis/: __init__.py  data_analyzer.py  evaluator.py  experiment_designer.py  extractor.py  pdf_parser.py  reviewer.py  scientific_writer.py
scientific-skills/arxiv-database/scripts/review/: __init__.py  data_models.py  parsers.py
scientific-skills/arxiv-database/scripts/templates/: __init__.py  deep_analysis.py  literature_review.py  reproduction.py  survey.py
scientific-skills/arxiv-database/tests/: test_arxiv_client.py  test_core.py  test_data_models.py  test_integration.py
scientific-skills/paper-validator/: SKILL.md  USER_GUIDE.md
(+5 files in other folders)
